[BlackBerry] Find-in-page fails to deactivate the old active match when moving backwards https://bugs.webkit.org/show_bug.cgi?id=84892

Patch by Andy Chen <andchen@rim.com> on 2012-04-27
Reviewed by Antonio Gomes.

Find in page fails to deactivate the old active match when moving backwards
because searchStartingPoint was incorrectly initialized.
Create a real range object instead of referencing other range object.
PR 152009

Internally reviewed by Yongxin Dai.

* WebKitSupport/InPageSearchManager.cpp:
(BlackBerry::WebKit::InPageSearchManager::findNextString):

git-svn-id: svn://svn.chromium.org/blink/trunk@115424 bbb929c8-8fbe-4397-9dbb-9b2b20218538