third_party/WebKit/Source/WebKit/blackberry/WebKitSupport/InPageSearchManager.cpp
@@ -27,6 +27,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "Frame.h"
 #include "Node.h"
 #include "Page.h"
+#include "Range.h"
 #include "TextIterator.h"
 #include "Timer.h"
 #include "WebPage_p.h"
@@ -100,7 +101,8 @@ bool InPageSearchManager::findNextString(const String& text, FindOptions findOpt
     if (m_activeMatch && !m_activeMatch->boundaryPointsValid())
         m_activeMatch = 0;
 
-    RefPtr<Range> searchStartingPoint(m_activeMatch);
+    ExceptionCode ec = 0;
+    RefPtr<Range> searchStartingPoint = m_activeMatch ? m_activeMatch->cloneRange(ec) : 0;
     bool newSearch = m_activeSearchString != text;
     bool forward = !(findOptions & WebCore::Backwards);
     if (newSearch) { // Start a new search.
